fixed unit tests
* removed integration tests for now